Fix recorded watch history consistency
