# src/model/api/recorded/IRecordedPlaybackApiModel.ts
@@ -2,11 +2,11 @@ import * as apid from '../../../../api';
 
 export default interface IRecordedPlaybackApiModel {
     get(recordedId: apid.RecordedId, userId: number): Promise<apid.RecordedPlayback>;
-    getHistory(userId: number, isHalfWidth: boolean, limit: number): Promise<apid.RecordedPlaybackHistory>;
+    getHistory(userId: number, isHalfWidth: boolean): Promise<apid.RecordedPlaybackHistory>;
     getHistorySettings(userId: number): Promise<apid.RecordedPlaybackHistorySettings>;
     updateHistorySettings(
         userId: number,
-        option: apid.RecordedPlaybackHistorySettings,
+        option: apid.UpdateRecordedPlaybackHistorySettingsOption,
     ): Promise<apid.RecordedPlaybackHistorySettings>;
     removeFromHistory(recordedId: apid.RecordedId, userId: number): Promise<void>;
     update(
